--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ECE_5532_Final_Project</name>
-  <version>2.0.2</version>
-  <description>The ECE_5532_Final_Project package</description>
-  <maintainer email="abc@todo.todo">abc</maintainer>
-  <license>TODO</license>
-
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
-  <depend>tf</depend>
-  <depend>dynamic_reconfigure</depend>
-  <depend>ugv_course_libs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>std_msgs</depend>
-  <depend>geometry_msgs</depend>
-
-  <export>
-  </export>
+<name>ece_5532_final</name>
+<version>0.0.0</version>
+<description>The ECE_5532_Final_Project package</description>
+<maintainer email="abc@todo.todo">abc</maintainer>
+<license>TODO</license>
+<buildtool_depend>catkin</buildtool_depend>
+<depend>roscpp</depend>
+<depend>tf</depend>
+<depend>dynamic_reconfigure</depend>
+<depend>ugv_course_libs</depend>
+<depend>sensor_msgs</depend>
+<depend>std_msgs</depend>
+<depend>geometry_msgs</depend>
+<export>
+</export>
 </package>
