--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
 <depend>sensor_msgs</depend>
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
+<depend>gazebo_msgs</depend>
 <export>
 </export>
 </package>
