Addition of costmaps, planners, and launch files

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-<name>ece_5532_final</name>
+<name>ECE_5532_Final_Project</name>
 <version>0.0.0</version>
 <description>The ECE_5532_Final_Project package</description>
 <maintainer email="abc@todo.todo">abc</maintainer>
