--- a/yaml/global_costmap_params.yaml
+++ b/yaml/global_costmap_params.yaml
@@ -12,21 +12,22 @@ resolution: 0.05 # m
 origin_x: -50 # m, default is zero which causes the "negative" direction to be off map (offset by half the size of the map)
 origin_y: -50 # m, default is zero which causes the "negative" direction to be off map (offset by half the size of the map)
 
+#must be in order of map, obstacle, inflation
 plugins:
   - {name: obstacles, type: "costmap_2d::ObstacleLayer"}
   - {name: inflation, type: "costmap_2d::InflationLayer"}
 
 obstacles:
-  obstacle_range: 2.5
-  raytrace_range: 3.0
+  obstacle_range: 2.5 #only lidar data within a certain range can be added to the costmap
+  raytrace_range: 3.0 #the distance needed to clear the costmap
 
   observation_sources: lidar_scan
   lidar_scan:
     topic: /a1/laser_front/scan
     sensor_frame: a1/laser_front
-    data_type: LaserScan
-    marking: true
-    clearing: true
+    data_type: LaserScan #message type
+    marking: true  #if the sensor is used for marking
+    clearing: true #if the sensor is used for clearing
 
 inflation:
   inflation_radius: 1.1
