--- a/yaml/global_planner_params.yaml
+++ b/yaml/global_planner_params.yaml
@@ -1,5 +1,5 @@
-allow_unknown: true
-planner_window_x: 0.0
-planner_window_y: 0.0
-default_tolerance: 0.0
-visualize_potential: false
+allow_unknown: true # true = planner will traverse unknown cells
+planner_window_x: 0.0 # forces the planner to look within certain regions
+planner_window_y: 0.0 # 0,0 allows the planner to look anywhere
+default_tolerance: 0.5 # means robot has to meet the goal within this tolerance, it's generally good to give something other than 0.0
+visualize_potential: false #constructs a point cloud to visualize costs of each cell
