--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,20 @@ ugv_course_libs
 sensor_msgs
 std_msgs
 geometry_msgs
+image_transport
+cv_bridge
 )
+find_package(OpenCV REQUIRED)
 
-catkin_package()
+
+catkin_package(
+  DEPENDS OpenCV
+)
 
 include_directories(
   ./PID/cpp/
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 add_library(PID PID/cpp/PID.cpp)
@@ -25,7 +32,7 @@ add_executable(follow_twist_override src/follow_twist_override.cpp)
 target_link_libraries(follow_twist_override ${catkin_LIBRARIES} PID)
 
 add_executable(follow_camera src/follow_camera.cpp)
-target_link_libraries(follow_camera ${catkin_LIBRARIES} PID)
+target_link_libraries(follow_camera ${catkin_LIBRARIES} PID ${OpenCV_LIBS})
 
 add_executable(lidar_nav src/lidar_nav.cpp)
 target_link_libraries(lidar_nav ${catkin_LIBRARIES} PID)
