--- a/cfg/follow_camera.cfg
+++ b/cfg/follow_camera.cfg
@@ -1,7 +1,9 @@
 #! /usr/bin/env python
-PACKAGE='opencv_example'
+PACKAGE='ece_5532_final'
+
 from dynamic_reconfigure.msg import SensorLevels
 from dynamic_reconfigure.parameter_generator_catkin import *
+
 gen = ParameterGenerator()
 
 gen.add("blue_thres",  int_t, 0, "Threshold",   200, 0, 255)
@@ -13,4 +15,4 @@ gen.add("hough_threshold",  int_t, 0, "Accumulator threshold", 25, 10, 200)
 gen.add("hough_min_length",  int_t, 0, "Minimum line length (pix)", 250, 5, 500)
 gen.add("hough_max_gap",  int_t, 0, "Max gap betweeen line segments (pix)", 50, 5, 500)
 
-exit(gen.generate(PACKAGE, PACKAGE, "RgbHough"))
+exit(gen.generate(PACKAGE, PACKAGE, "Dist"))
