--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>gazebo_msgs</depend>
+<depend>image_transport</depend>
+<depend>cv_bridge</depend>
 <export>
 </export>
 </package>
